fix: remove wrong font family

--- a/src/screens/cards_screen/cards_screen.module.scss
+++ b/src/screens/cards_screen/cards_screen.module.scss
@@ -4,7 +4,6 @@
 .cardScreen {
     @include centrate($main:start, $cross: stretch, $direction: column);
     min-height: 100dvh;
-    font-family: Arial, sans-serif;
     background-color: $clr-bg-secondary;
 }
 
